--- a/C# Fundamentals/C# OOP Advanced/11.UnitTesting/Ex/P05_IntegrationTest/P05_IntegrationTest.csproj
+++ b/C# Fundamentals/C# OOP Advanced/11.UnitTesting/Ex/P05_IntegrationTest/P05_IntegrationTest.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\P05_Integration\P05_Integration.csproj" />
+  </ItemGroup>
+
 </Project>
