Exam_Preparation_Kittens_Done_Pending_Fix_For_Jpg_Folder

--- a/C#Web/1.Basics/11.ExamPrep_I/MVCServer/SimpleMvc.App/SimpleMvc.App.csproj
+++ b/C#Web/1.Basics/11.ExamPrep_I/MVCServer/SimpleMvc.App/SimpleMvc.App.csproj
@@ -12,6 +12,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Resources\img\american-shorthair.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\img\munchkin.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\img\siamese.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\img\street-transcended.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Views\Layout.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
